objects/CaseToContactMapping__c/CaseToContactMapping__c.object-meta.xml
<CustomObject>
    <label>Case To Contact Mapping</label>
    <nameField>
        <label>CaseToContactMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case To Contact Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>