objects/CaseToContactMapping__c/fields/LF_Case__c.field-meta.xml
<CustomField>
    <fullName>LF_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LF Case</label>
    <referenceTo>LF_Case__c</referenceTo>
    <relationshipName>CaseToContactMappings</relationshipName>
    <type>Lookup</type>
</CustomField>